--- a/src/Catty/Resources/Localization/de.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/de.lproj/Localizable.strings
@@ -860,7 +860,7 @@
 "Media Library" = "Medienbibliothek";
 
 /* paint */
-"Menu" = "Men&#xFC;";
+"Menu" = "Menü";
 
 /* No comment provided by engineer. */
 "Message" = "Nachricht";
@@ -1709,7 +1709,7 @@
 "Welcome to Pocket Code" = "Willkommen bei Pocket Code";
 
 /* No comment provided by engineer. */
-"When project started" = "When project started";
+"When project started" = "Wenn Projekt gestartet";
 
 /* No comment provided by engineer. */
 "When screen is touched" = "Wenn der Bildschirm berührt wird";
